# nchain

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SETUP.md  blockchain.db  docker-compose.simple.yml  docker-compose.yml
config/: default.toml  development.toml  miner.toml  production.toml
contracts/: simple_storage.wasm
docs/: API.md  CLI.md
migrations/: 001_initial_schema.sql  002_add_performance_indexes.sql
scripts/: setup.sh  start-dev.sh  version-info.sh
src/: api.rs  block.rs  blockchain.rs  cli.rs  config.rs  contracts.rs  crypto.rs  errors.rs  lib.rs  main.rs  mining.rs  network.rs  poh.rs  storage.rs  transaction.rs
web/: dashboard.html
